hard-gists/7524815/run.log
=== Docker Run Log for 7524815 ===
Started at: Mi 29. Okt 17:10:50 CET 2025

[2025-10-29 17:10:51] START: Running container for 7524815
[2025-10-29 17:10:51] SUCCESS: Container 718f92afb80afc6b5dca1018a8552d8badaaf5612c0121d9191a5791485bf07e started for 7524815
=== Container logs for 7524815 ===
  File "/snippet.py", line 21
    print 'Attempting to access GPS...'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7524815 ===
[2025-10-29 17:10:53] INFO: Container 718f92afb80afc6b5dca1018a8552d8badaaf5612c0121d9191a5791485bf07e has stopped
